k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restapi-users-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: restapi-users
  template:
    metadata:
      labels:
        app: restapi-users
    spec:
      containers:
        - name: restapi-users-container
          image: IMAGE_PLACEHOLDER
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          readinessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 20
